--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a nutritional information webapp",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "author": "laika <beaubaker1027@gmail.com>",
   "license": "MIT",
@@ -13,5 +14,9 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "node-fetch": "^2.3.0"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0",
+    "supertest": "^4.0.2"
   }
 }
