--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "production": "NODE_ENV=production ./node_modules/.bin/pm2 start server.js -i max",
+    "end": "./node_modules/.bin/pm2 stop all ; ./node_modules/.bin/pm2 kill",
+    "stage":"git add . ; git status",
     "test": "jest"
   },
   "author": "laika <beaubaker1027@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
+    "dotenv-load": "^2.0.0",
     "express": "^4.16.4",
-    "node-fetch": "^2.3.0"
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1",
+    "node-fetch": "^2.3.0",
+    "pm2": "^3.5.1"
   },
   "devDependencies": {
     "jest": "^24.8.0",
