--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node server.js",
     "production": "NODE_ENV=production ./node_modules/.bin/pm2 start server.js -i max",
     "end": "./node_modules/.bin/pm2 stop all ; ./node_modules/.bin/pm2 kill",
-    "stage":"git add . ; git status",
-    "test": "jest"
+    "stage": "git add . ; git status",
+    "test": "NODE_ENV=test jest"
   },
   "author": "laika <beaubaker1027@gmail.com>",
   "license": "MIT",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "jest": "^24.8.0",
+    "nock": "^10.0.6",
     "supertest": "^4.0.2"
   }
 }
